<resources>
    <string name="app_name">Nutrimate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breakfast">breakfast</string>
    <string name="ibd">Informasi Berat Badan</string>
    <string name="foodname">Food Name</string>
    <string name="menurunkan">Menurunkan</string>
    <string name="menaikkan">Menaikkan</string>
    <string name="mempertahankan">Mempertahankan</string>
    <string name="saran">Anda juga dapat mimilih program anda sendiri</string>
    <string name="fooddec">Description</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="olahraga">olahraga</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="profil">Profil</string>
    <string name="logo">Logo</string>
    <string name="tipe">Tipe Tubuh Anda</string>
    <string name="rekomendasip">Rekomendasi Program</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="foto">Foto</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="bbprogresss">00</string>
    <string name="tbprogress">000</string>
    <string name="tipebb">Text</string>
    <string name="tbicon">Tb</string>
    <string name="isiprogress">Isi Progress</string>
    <string name="beratbadan">Berat Badan</string>
    <string name="editberatbadan">00 kg</string>
    <string name="edittinggibadan">000 cm</string>
    <string name="tinggibadan">Tinggi Badan</string>
    <string name="saveprogress">Simpan</string>
    <string name="username">Username</string>
    <string name="email">useremail@email.com</string>
    <string name="lemail">E-Mail</string>
    <string name="lpassword">Password</string>
    <string name="musername">masukkan username anda</string>
    <string name="memail">masukkan email anda</string>
    <string name="passwprd">masukkan password anda</string>
    <string name="mumur">masukkan umur anda</string>
    <string name="mkelamin">pilih jenis kelamin</string>
    <string name="alevel">Activity Level</string>
    <string name="pactivity">pilih activity level anda</string>
    <string name="edit">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="umur">Umur</string>
    <string name="kelamin">Jenis Kelamin</string>
    <string name="register">Register</string>
    <string name="lregister">Lakukan registrasi jika tidak mempunyai akun</string>
    <string name="camera">Camera</string>
    <string name="galeri">Galeri</string>
    <string name="up">Kirim</string>
    <string name="bahan">Bahan Makanan Anda</string>
    <string name="kalori">Kalori</string>
    <string name="karbo">Karbohidrat</string>
    <string name="protein">Protein</string>
    <string name="cook">Cook Now</string>
    <string name="bahanmasak">Bahan Masak</string>
    <string name="tatacara">Tata Cara</string>
    <string name="intesitas">Intesitas</string>
    <string name="target">Target</string>
    <string name="durasi">Durasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="alat">Alat</string>
    <string name="cara">Tata Cara</string>
    <string name="done">Selesai</string>
    <string name="ubah">Ubah Mode</string>
    <string name="hi">Halo</string>
    <string name="rule">Pastikan foto bahan dalam kondisi pencahaan yang bagus</string>
</resources>