<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="345dp"
        android:layout_height="113dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nutrimate" />

    <EditText
        android:id="@+id/username_register"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Username"
        android:background="@drawable/stoke"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/musername"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Email"
        android:background="@drawable/stoke"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/memail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lemail"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/username_register"
        app:layout_constraintTop_toBottomOf="@+id/username_register" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Password"
        android:background="@drawable/stoke"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passwprd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lpassword"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/email_register" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="167dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/password_register" />

    <ProgressBar
        android:id="@+id/loadingregister"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>